@@ -46,7 +46,6 @@
         ul li ul li {
             list-style-type: disc;
         }
-
     </style>
 </head>
 
@@ -65,7 +64,20 @@
     <li><span class="label label-success">Feature</span> Edit ACLs for files (Google Storage) (<a
         target="_blank" href="https://trac.cyberduck.io/ticket/11008">#11008</a>)
     </li>
+    <li><span class="label label-success">Feature</span> Support to set storage class (Google Storage)</li>
+    <li><span class="label label-success">Feature</span> Support for Glacier Deep Archive storage class (S3) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
+    </li>
+    <li><span class="label label-success">Feature</span> Allow selection of Glacier storage class as default for uploads
+        (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/10681">#10681</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Missing URLs to copy of CDN distributions (S3, Rackspace)</li>
     <li><span class="label label-warning">Bugfix</span> Reduced memory usage (macOS)</li>
+    <li><span class="label label-warning">Bugfix</span> Failure uploading files to vault in version 7 format
+        (Cryptomator) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11020">#11020</a>)
+    </li>
 </ul>
 
 <p>
@@ -102,7 +114,9 @@
     <li><span class="label label-warning">Bugfix</span> Allow downloading files marked as abusive (Google Drive) (<a
         target="_blank" href="https://trac.cyberduck.io/ticket/10377">#10377</a>)
     </li>
-    <li><span class="label label-warning">Bugfix</span> Apply public read permissions to files selected to share (Google Drive)</li>
+    <li><span class="label label-warning">Bugfix</span> Apply public read permissions to files selected to share (Google
+        Drive)
+    </li>
 </ul>
 
 <p>
