@@ -2,8 +2,13 @@ Cyberduck
 https://cyberduck.io/
 
 7.3.1
-- [Feature] Edit ACLs for files (Google Storage)$ (#11008)
+- [Feature] Edit ACLs for files (Google Storage) (#11008)
+- [Feature] Support to set storage class (Google Storage)
+- [Feature] Support for Glacier Deep Archive storage class (S3) (#10681)
+- [Feature] Allow selection of Glacier storage class as default for uploads (S3) (#10681)
+- [Bugfix] Missing URLs to copy of CDN distributions (S3, Rackspace)
 - [Bugfix] Reduced memory usage (macOS)
+- [Bugfix] Failure uploading files to vault in version 7 format (Cryptomator) (#11020)
 
 7.3.0
 - [Feature] Support for vault format version 7 (Cryptomator) (#10825)
